--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
   <div class="container-fluid p-0">
 
+    <!-- ABOUT ME -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
         <h1 class="mb-0">Digant
@@ -98,13 +99,14 @@
 
     <hr class="m-0">
 
+    <!-- EXPERIENCE -->
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Software Developer</h3>
+            <h3 class="mb-0 sub-title-h3">Software Developer</h3>
             <div class="subheading mb-3">Rejolut Technologies Pvt. Ltd.</div>
             <p>Worked on the following technologies: </p>
             <ul class="list-inline">
@@ -147,7 +149,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Deep Learning Intern</h3>
+            <h3 class="mb-0 sub-title-h3">Deep Learning Intern</h3>
             <div class="subheading mb-3">Concerto Software & Systems</div>
             <p>Worked on the following projects :</p>
             <ul class="mb-0 project-li">
@@ -164,7 +166,7 @@
         
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Team Leader & Web Development Intern</h3>
+            <h3 class="mb-0 sub-title-h3">Team Leader & Web Development Intern</h3>
             <div class="subheading mb-3">Software Development Group - RAIT</div>
             <p><b>Project:</b> RAIT College Website & Faculty Details Management System</p>
             <p><b>Work:</b> Successfully guided a team of 10 and developed a full-fledged dynamic & responsive college website with faculty management system integrated in it.</p>
@@ -177,7 +179,7 @@
         
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Development Intern</h3>
+            <h3 class="mb-0 sub-title-h3">Web Development Intern</h3>
             <div class="subheading mb-3">Software Development Group - RAIT</div>
             <p><b>Project:</b> Automatic Transcript Generation System</p>
             <p><b>Work:</b> Implemented security on the existing  system and developed modules for the same.</p>
@@ -194,13 +196,25 @@
 
     <hr class="m-0">
 
+    <!-- EDUCATION -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Mumbai</h3>
+            <h3 class="mb-0 sub-title-h3">University at Buffalo, New York</h3>
+            <div class="subheading mb-3">Master of Science in Computer Science & Engineering</div>
+            <div>Related Courses : Large Scale Distributed Systems, Information Retrieval, Algorithms, Blockchain Development</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-dark">August 2006 - May 2010</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0 sub-title-h3">University of Mumbai</h3>
             <div class="subheading mb-3">Bachelor of Engineering</div>
             <div>Major : Computer Engineering</div>
             <div>Final GPA: 8.81/10</div>
@@ -213,7 +227,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">C.K.T. Junior College</h3>
+            <h3 class="mb-0 sub-title-h3">C.K.T. Junior College</h3>
             <div>Major : Computer Science</div><!-- subheading mb-3 -->
             <div>Percentage: 82.46% (Class: Distinction)</div>
           </div>
@@ -224,7 +238,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">St. Joseph's High School</h3>
+            <h3 class="mb-0 sub-title-h3">St. Joseph's High School</h3>
             <!-- <div class="subheading mb-3">Computer Science</div>-->
             <p>Percentage: 83.82% (Class: Distinction)</p>
           </div>
@@ -238,6 +252,7 @@
 
     <hr class="m-0">
 
+    <!-- SKILLS -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
@@ -324,7 +339,7 @@
 
         <!-- Outfit Recommendation -->
         <div class="resume-content">
-          <h3 class="mb-0">Outfit Recommendation System using Machine Learning</h3>
+          <h3 class="mb-0 sub-title-h3">Outfit Recommendation System using Machine Learning</h3>
           <div>It is a python based web app running on top of Django Server which uses machine learning techniques such as K Means Clustering and Minimum distance algorithm to extract the skin tone of facial images and Decision Tree Learning to correctly classify outfits into groups and recommend outfits based on skin tone, occasion, size, popularity and other
           features.</div>
           <div><b>Technologies Used:</b> Python 3, Django, HTML5, CSS3, JavaScript, jQuery, Bootstrap 4.</div>
@@ -333,7 +348,7 @@
 
         <!-- RAIT Grievance Portal -->
         <div class="resume-content">
-          <h3 class="mb-0">RAIT Grievance Portal</h3>
+          <h3 class="mb-0 sub-title-h3">RAIT Grievance Portal</h3>
           <div>A web application designed for students and staff of our college to submit their grievances online and get response regarding the action taken by college for their problems.</div>
           <div><b>Technologies Used:</b> PHP 7, SQL, HTML5, CSS3, JavaScript, Bootstrap v4.</div>
         </div>
@@ -341,7 +356,7 @@
 
         <!-- Skin tone shade extractor -->
         <div class="resume-content">
-          <h3 class="mb-0">Skin tone shade extractor</h3>
+          <h3 class="mb-0 sub-title-h3">Skin tone shade extractor</h3>
           <div>A python project designed to categorize skin tone shades to a specific color. The project uses haar cascade to detect faces and K’ Means Clustering algorithm to detect skin tone and minimum distance to allot skin tone shade. The algorithm is pretty fast and can allot shades with good enough accuracy.</div>
           <div><b>Technologies Used:</b> Python 3, Sklearn, Numpy, OpenCV, Matplotlib.</div>
         </div>
@@ -349,7 +364,7 @@
 
         <!-- COLLEGE RESEARCH FORUM  -->
         <div class="resume-content">
-          <h3 class="mb-0">College Research Forum</h3>
+          <h3 class="mb-0 sub-title-h3">College Research Forum</h3>
           <div>A web portal designed for students to interact with their seniors to solve their doubts and gain knowledge regarding college projects.</div>
           <div><b>Technologies Used:</b> PHP 7, SQL, HTML5, CSS3, JS, jQuery, AJAX, Bootstrap v4.</div>
         </div>
@@ -372,6 +387,7 @@
 
     <hr class="m-0">
 
+    <!-- COURSES -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="courses">
       <div class="w-100">
         <h2 class="mb-5">Courses / Certifications</h2>
