--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@
           <div class="resume-content">
             <h3 class="mb-0 sub-title-h3">University at Buffalo, New York</h3>
             <div class="subheading mb-3">Master of Science in Computer Science & Engineering</div>
-            <div>Related Courses : Large Scale Distributed Systems, Information Retrieval, Algorithms, Blockchain Development</div>
+            <div>Related Courses : Distributed Systems, Information Retrieval, Algorithms, Blockchain Development</div>
+            <div>CGPA: 3.585/4</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-dark">August 2006 - May 2010</span>
@@ -367,72 +368,54 @@
         <ul class="list-inline">
           <li class="list-inline-item skills-btn-look">Python</li>
           <li class="list-inline-item skills-btn-look">JavaScript</li>
-          <li class="list-inline-item skills-btn-look">C</li>
-          <li class="list-inline-item skills-btn-look">C++</li>
+          <li class="list-inline-item skills-btn-look">TypeScript</li>
           <li class="list-inline-item skills-btn-look">Java</li>
-          <li class="list-inline-item skills-btn-look">PHP</li>
           <li class="list-inline-item skills-btn-look">SQL</li>
           <li class="list-inline-item skills-btn-look">Mongo DB</li>
           <li class="list-inline-item skills-btn-look">Solidity</li>
           <li class="list-inline-item skills-btn-look">HTML5</li>
+          <li class="list-inline-item skills-btn-look">PHP</li>
           <li class="list-inline-item skills-btn-look">CSS3</li>
           <li class="list-inline-item skills-btn-look">Bash</li>
+          <li class="list-inline-item skills-btn-look">C</li>
           <li class="list-inline-item skills-btn-look">Arduino</li>
         </ul>
 
         <div class="subheading mb-3">Frameworks</div>
         <ul class="list-inline">
-          <li class="list-inline-item skills-btn-look">Tensorflow</li>
-          <li class="list-inline-item skills-btn-look">Keras</li>
-          <li class="list-inline-item skills-btn-look">Django</li>
           <li class="list-inline-item skills-btn-look">Express</li>
-          <li class="list-inline-item skills-btn-look">React</li>
+          <li class="list-inline-item skills-btn-look">React JS</li>
+          <li class="list-inline-item skills-btn-look">Angular JS</li>
+          <li class="list-inline-item skills-btn-look">Django</li>
+          <li class="list-inline-item skills-btn-look">Flask</li>
+          <li class="list-inline-item skills-btn-look">FAST API</li>
           <li class="list-inline-item skills-btn-look">Strapi</li>
           <li class="list-inline-item skills-btn-look">jQuery</li>
           <li class="list-inline-item skills-btn-look">AJAX</li>
           <li class="list-inline-item skills-btn-look">Bootstrap</li>
+          <li class="list-inline-item skills-btn-look">Tensorflow</li>
+          <li class="list-inline-item skills-btn-look">Keras</li>
         </ul>
 
-        <div class="subheading mb-3">Other Technologies</div>
+        <div class="subheading mb-3">Other Technologies I've worked on </div>
         <ul class="list-inline">
-          <li class="list-inline-item skills-btn-look">Android Studio</li>
-          <li class="list-inline-item skills-btn-look">Github</li>
-          <li class="list-inline-item skills-btn-look">Google Cloud SDK</li>
+          <li class="list-inline-item skills-btn-look">Amazon Web Services</li>
+          <li class="list-inline-item skills-btn-look">Google Cloud Platform</li>
+          <li class="list-inline-item skills-btn-look">Azure Blob Storage</li>
           <li class="list-inline-item skills-btn-look">Firebase</li>
           <li class="list-inline-item skills-btn-look">Docker</li>
+          <li class="list-inline-item skills-btn-look">Android Studio</li>
+          <li class="list-inline-item skills-btn-look">Github</li>
           <li class="list-inline-item skills-btn-look">Nginx</li>
-          <li class="list-inline-item skills-btn-look">Paypal</li>
           <li class="list-inline-item skills-btn-look">Hedera Hashgraph</li>
-          <li class="list-inline-item skills-btn-look">Remix Ethereium</li>
           <li class="list-inline-item skills-btn-look">Smart Contract Development</li>
           <li class="list-inline-item skills-btn-look">Brain Tree payment</li>
           <li class="list-inline-item skills-btn-look">Passport.js</li>
           <li class="list-inline-item skills-btn-look">Sendgrid</li>
           <li class="list-inline-item skills-btn-look">Mirror Node Hedera</li>
-          <li class="list-inline-item skills-btn-look">R Studio</li>
-          <li class="list-inline-item skills-btn-look">Xampp</li>
-          <li class="list-inline-item skills-btn-look">Atlassian</li>
-          <li class="list-inline-item skills-btn-look">Jupyter Notebook</li>
-          <li class="list-inline-item skills-btn-look">Spyder</li>
           <li class="list-inline-item skills-btn-look">Oracle DB</li>
-          <li class="list-inline-item skills-btn-look">Weka</li>
-          <li class="list-inline-item skills-btn-look">Octave</li>
+          <li class="list-inline-item skills-btn-look">Matlab</li>
         </ul>
-        <!-- <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul> -->
       </div>
     </section>
 
