--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <div class="col-md-9">
         <div class="tab-content" id="v-pills-tabContent">
-          <div class="tab-pane fade show active" id="v-pills-company-1" role="tabpanel" aria-labelledby="v-pills-company-1-tab">
+          <div class="tab-pane fade active show" id="v-pills-company-1" role="tabpanel" aria-labelledby="v-pills-company-1-tab">
             <div class="resume-content">
               <h3 class="mb-0 sub-title-h3">Software Developer</h3>
               <div class="subheading mb-3">Rejolut Technologies Pvt. Ltd.</div>
@@ -419,6 +419,34 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5 heading-2">Projects</h2>
+
+        <!-- Twitter -->
+        <div class="resume-content">
+          <h3 class="mb-0 sub-title-h3">Twitter Search Engine Application, Covid 19 and vaccine rhetoric analysis.
+          </h3>
+          <div>Spearheaded the project and engineered an end-to-end search engine web application with sentiment analysis, topic modeling, possible anti-vax narrative, and analytics. Indexed 200k+ multi-lingual tweets in Apache Solr.</div>
+          <div>Identified and visualized excerpts of vaccine hesitancy amongst the general population and politicians.</div>
+          <div><b>Technologies Used:</b> Apache Solr, Angular, Express, Flask, Python, Mongo DB, AWS Comprehend & EC2, Highcharts.</div>
+        </div>
+        <br>
+
+        <!-- Medical Insurance Payment -->
+        <div class="resume-content">
+          <h3 class="mb-0 sub-title-h3">Medical Insurance Payment Settlements based on Ethereum Blockchain.
+          </h3>
+          <div>Designed and built a payments ecosystem for automating the insurance settlements between patients, doctors, hospitals, and insurers using Smart contracts and ERC20 tokens.</div>
+          <div><b>Technologies Used:</b> Angular, Express, Mongo DB, Smart Contracts, ERC20 tokens, web3js.</div>
+        </div>
+        <br>
+
+        <!-- DS Model -->
+        <div class="resume-content">
+          <h3 class="mb-0 sub-title-h3">Distributed Publisher Subscriber model for Github’s Trending Repositories.
+          </h3>
+          <div>Implemented a distributed Publisher Subscriber model from scratch using Django and Flask that could be scaled to n publishers and subscribers dynamically using docker scripts.</div>
+          <div>Improved the system using Apache Kafka for pubsub interaction and implemented fault tolerance between brokers.</div>
+        </div>
+        <br>
 
         <!-- Outfit Recommendation -->
         <div class="resume-content">
