--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
             <div class="resume-content">
               <h3 class="mb-0 sub-title-h3">Software Developer</h3>
               <div class="subheading mb-3">Rejolut Technologies Pvt. Ltd.</div>
+              <ul type="disc">
+              <li>Developed RESTful web services in ExpressJs and integrated Hedera Hashgraph SDK for executing blockchain-based transactions between users and smart contracts. Utilized Firebase for sending real-time notifications for transactions.</li>
+              <li>Optimized data sharing between smart contracts and databases to reduce redundancy and <b>transaction costs by 10%</b>.</li>
+              </ul>
               <p>Worked on the following technologies: </p>
               <ul class="list-inline">
                 <li class="list-inline-item skills-btn-look">Node</li>
@@ -165,11 +169,12 @@
               <div class="subheading mb-3">Concerto Software & Systems</div>
               <p>Worked on the following projects :</p>
               <ul class="mb-0 project-li">
-                <li>AI based ATM camera survelliance to detect multiple people and other unexpected actions.</li>
-                <li>Voice based BHIM UPI app as part of Hackathon organized by National Payments Corporation Of India (NPCI) wherein our team ranked amongst the top 15 finalists all over India.</li>
-                <li>Automatic trash detection in ATM using survelliance cameras. (Currently Working)</li>
+                <li>Built a Voice-based Payments application as part of a Hackathon organized by the National Payments Corporation Of India (NPCI) wherein our team ranked amongst <b>the top 15 finalists all over India.</b></li>
+                <li>Developed a data visualization framework using chartsjs library for business use cases.</li>
+                <li>Prototyped an Automatic Trash Detection system in ATMs based on computer vision using surveillance camera feeds.</li>
+                <li>AI based ATM camera survelliance to detect multiple people and generate heatmap of people inside the ATM premises.</li>
               </ul>
-              <p><b>Technologies Used in above projects:</b> Python, Tensorflow, Keras, Open CV, Matplotlib, Yolo Darknet Algorithm, Android Studio. </p>
+              <p><b>Technologies worked on:</b> Python, Tensorflow, Keras, Open CV, Matplotlib, Yolo Darknet Algorithm, Android Studio, JavaScript, Charts.js </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-dark">November 2019 - April 2020</span>
@@ -180,7 +185,7 @@
               <h3 class="mb-0 sub-title-h3">Team Leader & Web Development Intern</h3>
               <div class="subheading mb-3">Software Development Group - RAIT</div>
               <p><b>Project:</b> RAIT College Website & Faculty Details Management System</p>
-              <p><b>Work:</b> Successfully guided a team of 10 and developed a full-fledged dynamic & responsive college website with faculty management system integrated in it.</p>
+              <p><b>Work:</b> Mentored and collaborated with a team of 10 for development and integration of faculty management system.</p>
               <p><b>Technologies Used:</b> PHP 7, SQL, JS, jQuery,  AJAX, Bootstrap V4, HTML5, CSS3.</p>
             </div>
 
@@ -191,7 +196,8 @@
               <h3 class="mb-0 sub-title-h3">Web Development Intern</h3>
               <div class="subheading mb-3">Software Development Group - RAIT</div>
               <p><b>Project:</b> Automatic Transcript Generation System</p>
-              <p><b>Work:</b> Implemented security on the existing  system and developed modules for the same.</p>
+              <p><b>Work:</b> Identified security flaws and implemented fixes on the existing system.</p>
+              <p>Developed new modules for system.</p>
               <p><b>Technologies Used:</b> PHP 5, SQL, JS, HTML5, CSS3.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -305,8 +311,8 @@
           <div class="resume-content">
             <h3 class="mb-0 sub-title-h3">University at Buffalo, New York</h3>
             <div class="subheading mb-3">Master of Science in Computer Science & Engineering</div>
-            <div>Related Courses : Distributed Systems, Information Retrieval, Algorithms, Blockchain Development</div>
-            <div>CGPA: 3.585/4</div>
+            <div>Courses : MS Project Development, Distributed Systems, Machine Learning, Information Retrieval, Data Models and Query Languages, Algorithms, Blockchain Application Development, Special Topics in Biometrics and Security.</div>
+            <div><b>CGPA: 3.5/4</b></div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-dark">August 2021 - Feb 2023</span>
@@ -318,8 +324,8 @@
             <h3 class="mb-0 sub-title-h3">University of Mumbai</h3>
             <div class="subheading mb-3">Bachelor of Engineering</div>
             <div>Major : Computer Engineering</div>
-            <div>Final GPA: 8.81/10</div>
-            <div>CGPA: 8.08/10</div>
+            <div>Final GPA: 8.8/10</div>
+            <div><b>CGPA: 8/10</b></div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-dark">August 2015 - May 2019</span>
@@ -330,7 +336,7 @@
           <div class="resume-content">
             <h3 class="mb-0 sub-title-h3">C.K.T. Junior College</h3>
             <div>Major : Computer Science</div><!-- subheading mb-3 -->
-            <div>Percentage: 82.46% (Class: Distinction)</div>
+            <div><b>Percentage: 82.46% (Class: Distinction)</b></div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-dark">June 2013 - May 2015</span>
@@ -341,7 +347,7 @@
           <div class="resume-content">
             <h3 class="mb-0 sub-title-h3">St. Joseph's High School</h3>
             <!-- <div class="subheading mb-3">Computer Science</div>-->
-            <p>Percentage: 83.82% (Class: Distinction)</p>
+            <p><b>Percentage: 83.82% (Class: Distinction)</b></p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-dark">June 2011 - May 2013</span>
