Modified project and skills info to be loaded dynamically.

--- a/index.html
+++ b/index.html
@@ -132,49 +132,22 @@
           <div class="resume-content">
             <h3 class="mb-0 sub-title-h3">University at Buffalo, New York</h3>
             <div class="subheading mb-3">Master of Science in Computer Science & Engineering</div>
-            <div>Courses : MS Project Development, Distributed Systems, Machine Learning, Information Retrieval, Data Models and Query Languages, Algorithms, Blockchain Application Development, Special Topics in Biometrics and Security.</div>
-            <div><b>CGPA: 3.5/4</b></div>
+            <div class="subheading mb-3">Courses : </div>
+            <ul class="list-inline">
+              <li class="list-inline-item skills-btn-look">Distributed Systems</li>
+              <li class="list-inline-item skills-btn-look">Machine Learning</li>
+              <li class="list-inline-item skills-btn-look">Information Retrieval</li>
+              <li class="list-inline-item skills-btn-look">Data Models and Query Languages</li>
+              <li class="list-inline-item skills-btn-look">Algorithms</li>
+              <li class="list-inline-item skills-btn-look">Blockchain Application Development</li>
+              <li class="list-inline-item skills-btn-look">Special Topics in Biometrics and Security</li>
+              <li class="list-inline-item skills-btn-look">S Project Development</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-dark">August 2021 - Feb 2023</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0 sub-title-h3">University of Mumbai</h3>
-            <div class="subheading mb-3">Bachelor of Engineering</div>
-            <div>Major : Computer Engineering</div>
-            <div>Final GPA: 8.8/10</div>
-            <div><b>CGPA: 8/10</b></div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-dark">August 2015 - May 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0 sub-title-h3">C.K.T. Junior College</h3>
-            <div>Major : Computer Science</div><!-- subheading mb-3 -->
-            <div><b>Percentage: 82.46% (Class: Distinction)</b></div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-dark">June 2013 - May 2015</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0 sub-title-h3">St. Joseph's High School</h3>
-            <!-- <div class="subheading mb-3">Computer Science</div>-->
-            <p><b>Percentage: 83.82% (Class: Distinction)</b></p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-dark">June 2011 - May 2013</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -184,59 +157,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5 heading-2">Skills</h2>
-
-        <div class="subheading mb-3">Programming Languages</div>
-        <ul class="list-inline">
-          <li class="list-inline-item skills-btn-look">Python</li>
-          <li class="list-inline-item skills-btn-look">JavaScript</li>
-          <li class="list-inline-item skills-btn-look">TypeScript</li>
-          <li class="list-inline-item skills-btn-look">Java</li>
-          <li class="list-inline-item skills-btn-look">SQL</li>
-          <li class="list-inline-item skills-btn-look">Mongo DB</li>
-          <li class="list-inline-item skills-btn-look">Solidity</li>
-          <li class="list-inline-item skills-btn-look">HTML5</li>
-          <li class="list-inline-item skills-btn-look">PHP</li>
-          <li class="list-inline-item skills-btn-look">CSS3</li>
-          <li class="list-inline-item skills-btn-look">Bash</li>
-          <li class="list-inline-item skills-btn-look">C</li>
-          <li class="list-inline-item skills-btn-look">Arduino</li>
-        </ul>
-
-        <div class="subheading mb-3">Frameworks</div>
-        <ul class="list-inline">
-          <li class="list-inline-item skills-btn-look">Express</li>
-          <li class="list-inline-item skills-btn-look">React JS</li>
-          <li class="list-inline-item skills-btn-look">Angular JS</li>
-          <li class="list-inline-item skills-btn-look">Django</li>
-          <li class="list-inline-item skills-btn-look">Flask</li>
-          <li class="list-inline-item skills-btn-look">FAST API</li>
-          <li class="list-inline-item skills-btn-look">Strapi</li>
-          <li class="list-inline-item skills-btn-look">jQuery</li>
-          <li class="list-inline-item skills-btn-look">AJAX</li>
-          <li class="list-inline-item skills-btn-look">Bootstrap</li>
-          <li class="list-inline-item skills-btn-look">Tensorflow</li>
-          <li class="list-inline-item skills-btn-look">Keras</li>
-        </ul>
-
-        <div class="subheading mb-3">Other Technologies I've worked on </div>
-        <ul class="list-inline">
-          <li class="list-inline-item skills-btn-look">Amazon Web Services</li>
-          <li class="list-inline-item skills-btn-look">Google Cloud Platform</li>
-          <li class="list-inline-item skills-btn-look">Azure Blob Storage</li>
-          <li class="list-inline-item skills-btn-look">Firebase</li>
-          <li class="list-inline-item skills-btn-look">Docker</li>
-          <li class="list-inline-item skills-btn-look">Android Studio</li>
-          <li class="list-inline-item skills-btn-look">Github</li>
-          <li class="list-inline-item skills-btn-look">Nginx</li>
-          <li class="list-inline-item skills-btn-look">Hedera Hashgraph</li>
-          <li class="list-inline-item skills-btn-look">Smart Contract Development</li>
-          <li class="list-inline-item skills-btn-look">Brain Tree payment</li>
-          <li class="list-inline-item skills-btn-look">Passport.js</li>
-          <li class="list-inline-item skills-btn-look">Sendgrid</li>
-          <li class="list-inline-item skills-btn-look">Mirror Node Hedera</li>
-          <li class="list-inline-item skills-btn-look">Oracle DB</li>
-          <li class="list-inline-item skills-btn-look">Matlab</li>
-        </ul>
+        <div id="skills-container">
+          <!-- Skills will be dynamically inserted here -->
+        </div>
       </div>
     </section>
 
@@ -246,68 +169,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5 heading-2">Projects</h2>
-
-        <!-- Twitter -->
-        <div class="resume-content">
-          <h3 class="mb-0 sub-title-h3">Twitter Search Engine Application, Covid 19 and vaccine rhetoric analysis.
-          </h3>
-          <div>Spearheaded the project and engineered an end-to-end search engine web application with sentiment analysis, topic modeling, possible anti-vax narrative, and analytics. Indexed 200k+ multi-lingual tweets in Apache Solr.</div>
-          <div>Identified and visualized excerpts of vaccine hesitancy amongst the general population and politicians.</div>
-          <div><b>Technologies Used:</b> Apache Solr, Angular, Express, Flask, Python, Mongo DB, AWS Comprehend & EC2, Highcharts.</div>
+        <div id="project-container">
+          <!-- Projects will be dynamically inserted here -->
         </div>
-        <br>
-
-        <!-- Medical Insurance Payment -->
-        <div class="resume-content">
-          <h3 class="mb-0 sub-title-h3">Medical Insurance Payment Settlements based on Ethereum Blockchain.
-          </h3>
-          <div>Designed and built a payments ecosystem for automating the insurance settlements between patients, doctors, hospitals, and insurers using Smart contracts and ERC20 tokens.</div>
-          <div><b>Technologies Used:</b> Angular, Express, Mongo DB, Smart Contracts, ERC20 tokens, web3js.</div>
-        </div>
-        <br>
-
-        <!-- DS Model -->
-        <div class="resume-content">
-          <h3 class="mb-0 sub-title-h3">Distributed Publisher Subscriber model for Github’s Trending Repositories.
-          </h3>
-          <div>Implemented a distributed Publisher Subscriber model from scratch using Django and Flask that could be scaled to n publishers and subscribers dynamically using docker scripts.</div>
-          <div>Improved the system using Apache Kafka for pubsub interaction and implemented fault tolerance between brokers.</div>
-        </div>
-        <br>
-
-        <!-- Outfit Recommendation -->
-        <div class="resume-content">
-          <h3 class="mb-0 sub-title-h3">Outfit Recommendation System using Machine Learning</h3>
-          <div>It is a python based web app running on top of Django Server which uses machine learning techniques such as K Means Clustering and Minimum distance algorithm to extract the skin tone of facial images and Decision Tree Learning to correctly classify outfits into groups and recommend outfits based on skin tone, occasion, size, popularity and other
-          features.</div>
-          <div><b>Technologies Used:</b> Python 3, Django, HTML5, CSS3, JavaScript, jQuery, Bootstrap 4.</div>
-        </div>
-        <br>
-
-        <!-- RAIT Grievance Portal -->
-        <div class="resume-content">
-          <h3 class="mb-0 sub-title-h3">RAIT Grievance Portal</h3>
-          <div>A web application designed for students and staff of our college to submit their grievances online and get response regarding the action taken by college for their problems.</div>
-          <div><b>Technologies Used:</b> PHP 7, SQL, HTML5, CSS3, JavaScript, Bootstrap v4.</div>
-        </div>
-        <br>
-
-        <!-- Skin tone shade extractor -->
-        <div class="resume-content">
-          <h3 class="mb-0 sub-title-h3">Skin tone shade extractor</h3>
-          <div>A python project designed to categorize skin tone shades to a specific color. The project uses haar cascade to detect faces and K’ Means Clustering algorithm to detect skin tone and minimum distance to allot skin tone shade. The algorithm is pretty fast and can allot shades with good enough accuracy.</div>
-          <div><b>Technologies Used:</b> Python 3, Sklearn, Numpy, OpenCV, Matplotlib.</div>
-        </div>
-        <br>
-
-        <!-- COLLEGE RESEARCH FORUM  -->
-        <div class="resume-content">
-          <h3 class="mb-0 sub-title-h3">College Research Forum</h3>
-          <div>A web portal designed for students to interact with their seniors to solve their doubts and gain knowledge regarding college projects.</div>
-          <div><b>Technologies Used:</b> PHP 7, SQL, HTML5, CSS3, JS, jQuery, AJAX, Bootstrap v4.</div>
-        </div>
-        <br>
-
       </div>
     </section>
 
@@ -427,6 +291,12 @@
   <script src="js/resume.js"></script>
   <script src="content/work_info.js"></script>
   <script src="js/work-experience.js"></script>
+
+  <script src="content/skills_info.js"></script>
+  <script src="js/skills-loader.js"></script>
+
+  <script src="content/project_info.js"></script>
+  <script src="js/project-loader.js"></script>
 </body>
 
 </html>
