Modified course info to load dynamically.

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5 heading-2">Interests</h2>
-        <p class="para">My interests lie in the domain of Artificial Intelligence, Internet of Things, Automation,etc.</p>
-        <p class="mb-3 para">I spend a large amount of my free time exploring the latest technology advancements in the deep learning  world.</p>
-        <p class="mb-3 para">My hobbies are reading, freelancing web-dev projects, watching tech reviews and playing video games all from the Age of Empires to Need for Speed.</p>
+        <p class="para">My interests lie in the domain of Artificial Intelligence, Software Development, Internet of Things, Automation,etc.</p>
+        <p class="mb-3 para">I spend a large amount of my free time exploring the latest technology advancements and trends.</p>
+        <p class="mb-3 para">My hobbies are reading, freelancing web-dev projects, watching tech reviews and playing video games all from the <q>Age of Empires</q> to <q>Need for Speed</q> to <q>Call of Duty</q>.</p>
       </div>
     </section>
 
@@ -193,71 +193,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="courses">
       <div class="w-100">
         <h2 class="mb-5 heading-2">Courses / Certifications</h2>
-
-        <div class="subheading mb-3">Courses</div>
-        <ul class="fa-ul mb-0 courses-part">
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Deep Learning Specialization - By Coursera</li>
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Baseline AI, ML, Data by Google Qwiklabs.
-            </li>
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Microsoft Technology Associate in Security
-            Fundamentals.</li>
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Computer Hardware Essentials - from JetKing</li>
-          
-        </ul>
-
-        <div class="subheading mb-3">Certificates</div>
-        <ul class="fa-ul mb-0 certifications-part">
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Certificate of Excellence in Machine Learning
-            with Python conducted by CSI RAIT. (2017)</li>
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Qualified for Final Round of Placement Mantra
-            in Techmate 2k15
-          </li>
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Secured 2nd rank in Science Team Quiz in
-            Junior College.</li>
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Secured 1st and 2nd rank respectively for Best
-            Presentation Making Competition in Junior
-            College.</li>
-          <!-- <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Secured 130<sup>th</sup> state rank and 1,524 international rank in 10
-            <sup>th</sup> International Informatics Olympiad.</li>
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Selected amongst top 50 students for ‘I will be
-            the change’ contest organized by HINDUSTAN
-            TIMES NEWSPAPER in the state.
-          </li>
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Secured 1st rank in Roller skating competition
-            at Karnala Sports Academy.</li>
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Participated in Udaan - a Short Marathon
-            conducted by Social Wing.</li> -->
-          <li>
-            <i class="fa-li fa fa-trophy fa-icons-color"></i>
-            Participated in workshops based on Machine
-            Learning, Advanced Web Technologies, and
-            Android App Development.</li>
-          
-        </ul>
+        <div id="courses-container">
+          <!-- Courses will be dynamically inserted here -->
+        </div>
       </div>
     </section>
 
@@ -266,8 +204,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="research">
       <div class="w-100">
         <h2 class="mb-5 heading-2">Research</h2>
-        <p class="para">Published a paper on <b>Skin Tone And Occasion Oriented Outfit Recommendation System</b> in the <i>2nd International Conference on
-        Advances in Science & Technology (ICAST) 2019</i>.</p>
+        <p class="para">Published a paper on <b>Skin Tone And Occasion Oriented Outfit Recommendation System</b> in the <i>2nd International Conference on Advances in Science & Technology (ICAST) 2019</i>.</p>
         <p class="mb-3 para"><b>Link:</b> <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3368058">Skin Tone And Occasion Oriented Outfit Recommendation System</a></p>
       </div>
     </section>
@@ -297,6 +234,9 @@
 
   <script src="content/project_info.js"></script>
   <script src="js/project-loader.js"></script>
+
+  <script src="content/course_info.js"></script>
+  <script src="js/courses-loader.js"></script>
 </body>
 
 </html>
